// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/rate/demo/basic.md correctly 1`] = `
<ul
  class="wmstool-rate"
  tabindex="0"
>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/rate/demo/character.md correctly 1`] = `
<div>
  <ul
    class="wmstool-rate"
    tabindex="0"
  >
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-heart"
        />
      </div>
    </li>
  </ul>
  <br />
  <ul
    class="wmstool-rate"
    style="font-size:36px"
    tabindex="0"
  >
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        A
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        A
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        A
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        A
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        A
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        A
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        A
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        A
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        A
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        A
      </div>
    </li>
  </ul>
  <br />
  <ul
    class="wmstool-rate"
    tabindex="0"
  >
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        好
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        好
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        好
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        好
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        好
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        好
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        好
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        好
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        好
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        好
      </div>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/rate/demo/disabled.md correctly 1`] = `
<ul
  class="wmstool-rate wmstool-rate-disabled"
  tabindex="-1"
>
  <li
    class="wmstool-rate-star wmstool-rate-star-full"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-full"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/rate/demo/half.md correctly 1`] = `
<ul
  class="wmstool-rate"
  tabindex="0"
>
  <li
    class="wmstool-rate-star wmstool-rate-star-full"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-full"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-half wmstool-rate-star-active"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
  <li
    class="wmstool-rate-star wmstool-rate-star-zero"
  >
    <div
      class="wmstool-rate-star-first"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
    <div
      class="wmstool-rate-star-second"
    >
      <i
        class="anticon anticon-star"
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/rate/demo/text.md correctly 1`] = `
<span>
  <ul
    class="wmstool-rate"
    tabindex="0"
  >
    <li
      class="wmstool-rate-star wmstool-rate-star-full"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-full"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-full"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
    </li>
    <li
      class="wmstool-rate-star wmstool-rate-star-zero"
    >
      <div
        class="wmstool-rate-star-first"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
      <div
        class="wmstool-rate-star-second"
      >
        <i
          class="anticon anticon-star"
        />
      </div>
    </li>
  </ul>
  <span
    class="wmstool-rate-text"
  >
    3 stars
  </span>
</span>
`;
